--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="js/materialize.min.js"></script>
 
-<script src="js/http.js"></script>
+<!--<script src="js/http.js"></script>-->
+<script src="js/httpEs6.js"></script>
+<script src="js/promise.js"></script>
+
 <script src="js/ui.js"></script>
 
 <script>
